@@ -1,3 +1,8 @@
+2011-04-26  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/48588
+	* gfortran.dg/whole_file_33.f90: New.
+
 2011-04-25  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/cpp0x/regress/template-const2.C: New.
